[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/ReadyScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/PeerStatus.tscn" type="PackedScene" id=3]

[node name="ReadyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 102.0
margin_right = -100.0
margin_bottom = -98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchIDContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 100.0
margin_top = 20.0
margin_right = -100.0
margin_bottom = 58.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MatchIDContainer"]
margin_top = 5.0
margin_right = 207.0
margin_bottom = 53.0
text = "Match ID:"

[node name="MatchID" type="LineEdit" parent="Panel/MatchIDContainer"]
margin_left = 207.0
margin_right = 520.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "XXXX-XXXX-XXXX-XXXX"
align = 1
editable = false

[node name="MatchCopyButton" type="Button" parent="Panel/MatchIDContainer"]
margin_left = 520.0
margin_right = 624.0
margin_bottom = 58.0
text = "Copy"

[node name="StatusContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -100.0
margin_right = 300.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeerStatus" parent="Panel/StatusContainer" instance=ExtResource( 3 )]

[node name="ReadyButton" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = -100.0
margin_right = -300.0
margin_bottom = -50.0
disabled = true
text = "I'm Ready!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/MatchIDContainer/MatchCopyButton" to="." method="_on_MatchCopyButton_pressed"]
[connection signal="pressed" from="Panel/ReadyButton" to="." method="_on_ReadyButton_pressed"]
